# p1SSDD

./: mainCliente  mainServer  multMatrix.7z
fileManager/P1_Filemanager/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fm_imp.cpp  fm_imp.h  fm_stub.cpp  fm_stub.h  mainCliente  mainCliente.cpp  mainServer  mainServer.cpp
fileManager/P1_Filemanager/dirlocal/: debian.txt  foksapos.txt
multMatrix/: CMakeCache.txt  CMakeLists.txt  Makefile  client.cpp  client_multMatrix  cmake_install.cmake  main_multMatrix.cpp  multmatrix.cpp  multmatrix_imp.cpp  multmatrix_imp.h  multmatrix_stub.cpp  multmatrix_stub.h  resultado.txt  resultado2.txt  server.cpp  server_multMatrix
